[gd_scene load_steps=4 format=3 uid="uid://bvwi2ta8kd1mj"]

[ext_resource type="Script" uid="uid://c57m5pw2ci2a3" path="res://scenes/ui/test_inventory_panel.gd" id="1_test"]
[ext_resource type="Theme" uid="uid://cpdx7u62cktq6" path="res://assets/themes/ui_theme.tres" id="2_ui_theme"]
[ext_resource type="PackedScene" path="res://scenes/ui/inventory_panel.tscn" id="3_inventory_panel"]

[node name="TestInventoryPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_ui_theme")
script = ExtResource("1_test")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.15, 0.2, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Inventory Panel Test"
horizontal_alignment = 1

[node name="CharacterButtons" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="InventoryPanel" parent="VBoxContainer/CenterContainer" instance=ExtResource("3_inventory_panel")]
unique_name_in_owner = true
layout_mode = 2

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Loading..."
horizontal_alignment = 1

[node name="Instructions" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.5, 0.6, 1)
theme_override_font_sizes/font_size = 16
text = "Click inventory items to select for equip. Click equipment slots to unequip.
Press 1-9 to switch characters. Press Escape to cancel."
horizontal_alignment = 1
